// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bolt Tabs Props Inset: auto 1`] = `
<bolt-tabs inset="auto"
           data-bolt-more-text="More"
>
  <div class="c-bolt-tabs c-bolt-tabs--align-start c-bolt-tabs--inset">
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-1"
           class="c-bolt-tabs__input"
           checked
    >
    <label for="tabs-12345-1"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 1
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 1
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-2"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-2"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 2
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 2
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-3"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-3"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 3
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 3
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
  </div>
</bolt-tabs>
`;

exports[`Bolt Tabs Props Inset: off 1`] = `
<bolt-tabs inset="off"
           data-bolt-more-text="More"
>
  <div class="c-bolt-tabs c-bolt-tabs--align-start ">
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-1"
           class="c-bolt-tabs__input"
           checked
    >
    <label for="tabs-12345-1"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 1
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 1
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-2"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-2"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 2
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 2
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-3"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-3"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 3
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 3
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
  </div>
</bolt-tabs>
`;

exports[`Bolt Tabs Props Inset: on 1`] = `
<bolt-tabs inset="on"
           data-bolt-more-text="More"
>
  <div class="c-bolt-tabs c-bolt-tabs--align-start c-bolt-tabs--inset">
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-1"
           class="c-bolt-tabs__input"
           checked
    >
    <label for="tabs-12345-1"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 1
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 1
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small c-bolt-tab-panel--inset">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-2"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-2"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 2
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 2
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small c-bolt-tab-panel--inset">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-3"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-3"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 3
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 3
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small c-bolt-tab-panel--inset">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
  </div>
</bolt-tabs>
`;

exports[`Bolt Tabs Props align: center 1`] = `
<bolt-tabs align="center"
           data-bolt-more-text="More"
>
  <div class="c-bolt-tabs c-bolt-tabs--align-center c-bolt-tabs--inset">
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-1"
           class="c-bolt-tabs__input"
           checked
    >
    <label for="tabs-12345-1"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 1
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 1
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-2"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-2"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 2
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 2
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-3"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-3"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 3
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 3
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
  </div>
</bolt-tabs>
`;

exports[`Bolt Tabs Props align: end 1`] = `
<bolt-tabs align="end"
           data-bolt-more-text="More"
>
  <div class="c-bolt-tabs c-bolt-tabs--align-end c-bolt-tabs--inset">
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-1"
           class="c-bolt-tabs__input"
           checked
    >
    <label for="tabs-12345-1"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 1
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 1
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-2"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-2"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 2
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 2
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-3"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-3"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 3
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 3
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
  </div>
</bolt-tabs>
`;

exports[`Bolt Tabs Props align: start 1`] = `
<bolt-tabs align="start"
           data-bolt-more-text="More"
>
  <div class="c-bolt-tabs c-bolt-tabs--align-start c-bolt-tabs--inset">
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-1"
           class="c-bolt-tabs__input"
           checked
    >
    <label for="tabs-12345-1"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 1
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 1
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-2"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-2"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 2
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 2
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-3"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-3"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 3
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 3
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
  </div>
</bolt-tabs>
`;

exports[`Bolt Tabs Props label_spacing: medium 1`] = `
<bolt-tabs label-spacing="medium"
           data-bolt-more-text="More"
>
  <div class="c-bolt-tabs c-bolt-tabs--align-start c-bolt-tabs--inset">
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-1"
           class="c-bolt-tabs__input"
           checked
    >
    <label for="tabs-12345-1"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-medium"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 1
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 1
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-2"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-2"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-medium"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 2
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 2
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-3"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-3"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-medium"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 3
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 3
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
  </div>
</bolt-tabs>
`;

exports[`Bolt Tabs Props label_spacing: small 1`] = `
<bolt-tabs label-spacing="small"
           data-bolt-more-text="More"
>
  <div class="c-bolt-tabs c-bolt-tabs--align-start c-bolt-tabs--inset">
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-1"
           class="c-bolt-tabs__input"
           checked
    >
    <label for="tabs-12345-1"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 1
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 1
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-2"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-2"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 2
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 2
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-3"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-3"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 3
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 3
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
  </div>
</bolt-tabs>
`;

exports[`Bolt Tabs Props panel_spacing: medium 1`] = `
<bolt-tabs panel-spacing="medium"
           data-bolt-more-text="More"
>
  <div class="c-bolt-tabs c-bolt-tabs--align-start c-bolt-tabs--inset">
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-1"
           class="c-bolt-tabs__input"
           checked
    >
    <label for="tabs-12345-1"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 1
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 1
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-medium">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-2"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-2"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 2
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 2
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-medium">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-3"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-3"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 3
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 3
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-medium">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
  </div>
</bolt-tabs>
`;

exports[`Bolt Tabs Props panel_spacing: none 1`] = `
<bolt-tabs panel-spacing="none"
           data-bolt-more-text="More"
>
  <div class="c-bolt-tabs c-bolt-tabs--align-start c-bolt-tabs--inset">
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-1"
           class="c-bolt-tabs__input"
           checked
    >
    <label for="tabs-12345-1"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 1
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 1
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-none">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-2"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-2"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 2
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 2
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-none">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-3"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-3"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 3
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 3
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-none">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
  </div>
</bolt-tabs>
`;

exports[`Bolt Tabs Props panel_spacing: small 1`] = `
<bolt-tabs panel-spacing="small"
           data-bolt-more-text="More"
>
  <div class="c-bolt-tabs c-bolt-tabs--align-start c-bolt-tabs--inset">
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-1"
           class="c-bolt-tabs__input"
           checked
    >
    <label for="tabs-12345-1"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 1
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 1
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-2"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-2"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 2
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 2
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-3"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-3"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 3
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 3
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
  </div>
</bolt-tabs>
`;

exports[`Bolt Tabs Props scrollOffset 1`] = `
<bolt-tabs scroll-offset="100"
           data-bolt-more-text="More"
>
  <div class="c-bolt-tabs c-bolt-tabs--align-start c-bolt-tabs--inset">
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-1"
           class="c-bolt-tabs__input"
           checked
    >
    <label for="tabs-12345-1"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 1
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 1
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-2"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-2"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 2
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 2
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-3"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-3"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 3
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 3
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
  </div>
</bolt-tabs>
`;

exports[`Bolt Tabs Props scrollOffsetSelector 1`] = `
<bolt-tabs scroll-offset-selector=".example-selector"
           data-bolt-more-text="More"
>
  <div class="c-bolt-tabs c-bolt-tabs--align-start c-bolt-tabs--inset">
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-1"
           class="c-bolt-tabs__input"
           checked
    >
    <label for="tabs-12345-1"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 1
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 1
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-2"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-2"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 2
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 2
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-3"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-3"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 3
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 3
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
  </div>
</bolt-tabs>
`;

exports[`Bolt Tabs Props selected_tab 1`] = `
<bolt-tabs selected-tab="2"
           data-bolt-more-text="More"
>
  <div class="c-bolt-tabs c-bolt-tabs--align-start c-bolt-tabs--inset">
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-1"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-1"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 1
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 1
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-2"
           class="c-bolt-tabs__input"
           checked
    >
    <label for="tabs-12345-2"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 2
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 2
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-3"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-3"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 3
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 3
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
  </div>
</bolt-tabs>
`;

exports[`Bolt Tabs default 1`] = `
<bolt-tabs data-bolt-more-text="More">
  <div class="c-bolt-tabs c-bolt-tabs--align-start c-bolt-tabs--inset">
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-1"
           class="c-bolt-tabs__input"
           checked
    >
    <label for="tabs-12345-1"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 1
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 1
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-2"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-2"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 2
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 2
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-3"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-3"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 3
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 3
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
  </div>
</bolt-tabs>
`;

exports[`Bolt Tabs default with web component 1`] = `
<bolt-tabs data-bolt-more-text="More">
  <div class="c-bolt-tabs c-bolt-tabs--align-start c-bolt-tabs--inset">
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-1"
           class="c-bolt-tabs__input"
           checked
    >
    <label for="tabs-12345-1"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 1
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 1
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-2"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-2"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 2
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 2
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-3"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-3"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 3
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 3
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
  </div>
</bolt-tabs>
`;

exports[`Bolt Tabs default with web component 2`] = `
<div class="c-bolt-tabs c-bolt-tabs--align-start c-bolt-tabs--inset">
  <div role="tablist"
       class="c-bolt-tabs__nav"
  >
    <bolt-trigger no-outline
                  role="tab"
                  class="c-bolt-tabs__label c-bolt-tabs__item c-bolt-tabs__label--spacing-small"
                  display="inline"
                  aria-selected="true"
                  aria-controls="tab-panel-12345-1"
                  id="tab-label-12345-1"
                  tabindex="0"
                  aria-hidden="false"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 1
        </span>
      </span>
    </bolt-trigger>
    <bolt-trigger no-outline
                  role="tab"
                  class="c-bolt-tabs__label c-bolt-tabs__item c-bolt-tabs__label--spacing-small"
                  display="inline"
                  aria-selected="false"
                  aria-controls="tab-panel-12345-2"
                  id="tab-label-12345-2"
                  tabindex="-1"
                  aria-hidden="false"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 2
        </span>
      </span>
    </bolt-trigger>
    <bolt-trigger no-outline
                  role="tab"
                  class="c-bolt-tabs__label c-bolt-tabs__item c-bolt-tabs__label--spacing-small"
                  display="inline"
                  aria-selected="false"
                  aria-controls="tab-panel-12345-3"
                  id="tab-label-12345-3"
                  tabindex="-1"
                  aria-hidden="false"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 3
        </span>
      </span>
    </bolt-trigger>
    <div class="c-bolt-tabs__item c-bolt-tabs__show-more is-hidden"
         aria-hidden="true"
    >
      <button type="button"
              aria-haspopup="true"
              aria-expanded="false"
              class="c-bolt-tabs__button c-bolt-tabs__show-button"
      >
        <span class="c-bolt-tabs__show-text">
          More
        </span>
        <span class="c-bolt-tabs__show-icon">
          <svg xmlns="http://www.w3.org/2000/svg"
               viewbox="0 0 32 32"
               class="e-bolt-icon"
          >
            <path fill="#151619"
                  fill-rule="evenodd"
                  d="M26.6 12.4c.6-.6.6-1.6 0-2.2s-1.6-.6-2.2 0L16 18.5l-8.3-8.4c-.6-.6-1.6-.6-2.2 0-.3.4-.5.8-.5 1.2s.2.8.5 1.1l9.4 9.4c.6.6 1.6.6 2.2 0z"
                  clip-rule="evenodd"
            >
            </path>
          </svg>
        </span>
      </button>
      <div class="c-bolt-tabs__dropdown">
        <div class="c-bolt-tabs__dropdown-list">
          <bolt-trigger no-outline
                        role="tab"
                        class="c-bolt-tabs__label c-bolt-tabs__item c-bolt-tabs__label--spacing-small c-bolt-tabs__label--is-duplicate c-bolt-tabs__label--vertical-border"
                        display="block"
                        aria-selected="true"
                        aria-controls="tab-panel-12345-1"
                        id="tab-dropdown-12345-1"
                        tabindex="0"
                        aria-hidden="false"
          >
            <span class="c-bolt-tabs__label-inner">
              <span class="c-bolt-tabs__label-text">
                Tab label 1
              </span>
            </span>
          </bolt-trigger>
          <bolt-trigger no-outline
                        role="tab"
                        class="c-bolt-tabs__label c-bolt-tabs__item c-bolt-tabs__label--spacing-small c-bolt-tabs__label--is-duplicate c-bolt-tabs__label--vertical-border"
                        display="block"
                        aria-selected="false"
                        aria-controls="tab-panel-12345-2"
                        id="tab-dropdown-12345-2"
                        tabindex="-1"
                        aria-hidden="false"
          >
            <span class="c-bolt-tabs__label-inner">
              <span class="c-bolt-tabs__label-text">
                Tab label 2
              </span>
            </span>
          </bolt-trigger>
          <bolt-trigger no-outline
                        role="tab"
                        class="c-bolt-tabs__label c-bolt-tabs__item c-bolt-tabs__label--spacing-small c-bolt-tabs__label--is-duplicate c-bolt-tabs__label--vertical-border"
                        display="block"
                        aria-selected="false"
                        aria-controls="tab-panel-12345-3"
                        id="tab-dropdown-12345-3"
                        tabindex="-1"
                        aria-hidden="false"
          >
            <span class="c-bolt-tabs__label-inner">
              <span class="c-bolt-tabs__label-text">
                Tab label 3
              </span>
            </span>
          </bolt-trigger>
        </div>
      </div>
    </div>
  </div>
  <div class="c-bolt-tabs__panels-container">
    <slot>
    </slot>
  </div>
</div>
`;

exports[`Bolt Tabs default with web component 3`] = `
<bolt-tabs data-bolt-more-text="More"
           ready
           class
>
  <bolt-tab-panel selected>
    <div slot="label">
      Tab label 1
    </div>
    This is the tab content.
  </bolt-tab-panel>
  <bolt-tab-panel>
    <div slot="label">
      Tab label 2
    </div>
    This is the tab content.
  </bolt-tab-panel>
  <bolt-tab-panel>
    <div slot="label">
      Tab label 3
    </div>
    This is the tab content.
  </bolt-tab-panel>
</bolt-tabs>
`;
